packages/typst.ts/examples/typst.ts.css
body {
  margin: 0;
  padding: 0;
  background: #343541; /* rgba(255, 255, 255, 0.9); */
}

.typst-app {
  margin: 0;
}

.typst-page.canvas {
  margin: 0;
}

.text-layer {
  position: relative;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;
  opacity: 0.2;
  line-height: 1;
}

.text-layer > div {
  color: transparent;
  /* position: absolute; */
  white-space: pre;
  cursor: text;
  transform-origin: 0% 0%;
}

.typst-annotation {
  margin: 0;
  position: absolute;
  z-index: 10;
}

.navigator {
  height: auto;
  width: 100%;
  margin: 0px;
  padding: 0px;
  background: #343541; /* rgba(255, 255, 255, 0.9); */
  top: 0;
}

.navigator ul {
  margin: 0px;
  padding: 0px;
  list-style-type: none;
  width: auto;
  white-space: nowrap;
  overflow: hidden;
  padding: 0px;
}

.navigator li {
  float: left;
  position: relative;
  overflow: hidden;
}

.navigator li.right {
  float: right;
  position: relative;
  overflow: hidden;
}

.navigator li a {
  display: block;
  color: white;
  /* color: #636b6f; */
  font-size: 30px;
  text-align: center;
  margin: 0px -1px 0px;
  font-family: 'Garamond', sans-serif;
  overflow: hidden;
  text-decoration: none;
}

.navigator a:after {
  display: flex;
  align-items: baseline;
  content: '';
  border-bottom: solid 2px white;
  transform: translateY(-6.5px) scaleX(0);
  transition: transform 0.15s ease-in-out;
}

.navigator a:hover:after {
  transform: translateY(-6.5px) scaleX(1);
}

.typst-text {
  pointer-events: bounding-box;
}

.tsel span,
.tsel {
  position: fixed;
  text-align: justify;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  text-align-last: justify;
  color: transparent;
}
.tsel span::-moz-selection,
.tsel::-moz-selection {
  color: transpaent;
  background: #7db9dea0;
}
.tsel span::selection,
.tsel::selection {
  color: transpaent;
  background: #7db9dea0;
}
svg {
  --glyph_fill: black;
}
.pseudo-link {
  fill: transparent;
  cursor: pointer;
  pointer-events: all;
}
.outline_glyph path {
  fill: var(--glyph_fill);
}
.outline_glyph path {
  transition: 0.2s fill;
}
.hover .typst-text {
  --glyph_fill: #66bab7;
}
.typst-jump-ripple,
.typst-debug-react-ripple {
  width: 0;
  height: 0;
  background-color: transparent;
  position: absolute;
  border-radius: 50%;
}
.typst-jump-ripple {
  border: 1px solid #66bab7;
}
.typst-debug-react-ripple {
  border: 1px solid #cb1b45;
}
@keyframes typst-jump-ripple-effect {
  to {
    width: 10vw;
    height: 10vw;
    opacity: 0.01;
    margin: -5vw;
  }
}
@keyframes typst-debug-react-ripple-effect {
  to {
    width: 3vw;
    height: 3vw;
    opacity: 0.01;
    margin: -1.5vw;
  }
}

